cfg/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: onp-service
spec:
  type: ClusterIP
  selector:
    app: onp-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
