cfg/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: onp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: aks-onp-ingress-cert.eastus2.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: onp-service
              servicePort: 80
  tls:
    - hosts:
      - aks-onp-ingress-cert.eastus2.cloudapp.azure.com
      secretName: onp2-secret
